@@ -1,12 +1,12 @@
 Package: tigerstats
 Type: Package
 Title: R for Elementary Statistics
-Version: 0.1.3
-Date: 2014-03-24
+Version: 0.1.4
+Date: 2014-04-03
 Author: Rebekah Robinson <rebekah_robinson@georgetowncollege.edu> and Homer
     White <hwhite0@georgetowncollege.edu>
 Maintainer: Homer White <hwhite0@georgetowncollege.edu>
-Description: This package consiists of datasets and functions that are useful
+Description: This package consists of datasets and functions that are useful
     in the teaching of statistics at an elementary level to students who may
     have little or no previous experience with the command line.  The functions
     for elementary inferential procedures follow a uniform interface for user
